test/libyul/yulSyntaxTests/dot_ellipse_function_arg.yul
{
    function x(a...b) {}
}
// ----
// SyntaxError 7771: (17-22='a...b'): "a...b" is not a valid identifier (contains consecutive dots).
